<resources>
    <string name="app_name">Paises Intent Kotlin</string>
    <string name="espana">España</string>
    <string name="extension_espana">Extensión: 505.944 km2</string>
    <string name="poblacion_espana">Población: 47.329.981 hab.</string>
    <string name="francia">Francia</string>
    <string name="extension_francia">Extensión: 675.417 km2</string>
    <string name="poblacion_francia">Población: 67.028.048 hab.</string>
    <string name="portugal">Portugal</string>
    <string name="pais">País</string>
    <string name="extension_pais">Extensión: ????? km2</string>
    <string name="poblacion_pais">Población: ?????? hab.</string>
</resources>