<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".EspanaActivity">

    <TextView
        android:id="@+id/textView9"
        android:layout_width="171dp"
        android:layout_height="88dp"
        android:text="@string/espana"
        android:textSize="30sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="71dp"
        tools:layout_editor_absoluteY="38dp" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:text="@string/extension_espana"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:layout_margin="10dp"
        android:text="@string/poblacion_espana" />
</LinearLayout>