<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".EspanaActivity">

    <TextView
        android:id="@+id/tv_pais"
        android:layout_width="171dp"
        android:layout_height="wrap_content"
        android:text="@string/francia"
        android:textSize="30sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="71dp"
        tools:layout_editor_absoluteY="38dp" />

    <TextView
        android:id="@+id/tv_extension"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/extension_francia"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tv_poblacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/poblacion_francia"
        android:textSize="24sp" />
</LinearLayout>