<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/bt_francia"
        android:layout_width="210dp"
        android:layout_height="100dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="56dp"
        android:fontFamily="sans-serif-black"
        android:onClick="francia_click"
        android:text="@string/francia"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_espana" />

    <Button
        android:id="@+id/bt_portugal"
        android:layout_width="210dp"
        android:layout_height="100dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="232dp"
        android:fontFamily="sans-serif-black"
        android:onClick="portugal_click"
        android:text="@string/portugal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_espana" />

    <Button
        android:id="@+id/bt_espana"
        android:layout_width="210dp"
        android:layout_height="100dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="64dp"
        android:fontFamily="sans-serif-black"
        android:onClick="espana_click"
        android:text="@string/espana"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>